@@ -1,3 +1,9 @@
+2008-07-25  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/datafile.c (plot_ticlabel_using): If tic labels will be generated
+	from an expression then force evaluation of all column contents.
+	Otherwise references to column() return uninitialized garbage. Bugfix.
+
 2008-07-23  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/mouse.c src/command.c (pause_command) src/command.h:
